--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,11 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
     "cra-template-redux": "2.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -11,6 +13,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^5.1.0"
   },
   "scripts": {
